syntax = "proto3";

option csharp_namespace = "gRPC_Messenger";

package gRPC_Messenger;

service Notification {
  rpc Notify (NotifyRequest) returns (NotifyReply);
}

message NotifyRequest {
  string topic = 1;
  string title = 2;
  string message = 3;
}

message NotifyReply {
  bool isSuccess = 1;
}
